# EEG_reading_task

./: .gitattributes  .gitignore  1.ov  README.md  Stimulations.py  experiment.py  offline_viewer.xml  online_viewer.xml  para.txt  psychopyExp.bat  pyproject.toml  reading_formatting.py  requirements.txt  sandbox.ipynb  task.py  task_final.py  test_reading.psyexp  test_reading_lastrun.py
conditions/: conditions.xlsx
passage_qa/: questionbank.xlsx
passages/: R1.txt  R2.txt  R3.txt  R4.txt
psychopy_experiment/: Participants.txt  Stimulations.py  sandbox.ipynb  slider.py  task.py  test.py
src/: Classification.ipynb  Classification_2.ipynb  Classification_plots.ipynb  PCA_between_partcipants.py  PCA_partcipant_level.py  PSD_group_level_ttest_results_with_effect_sizes.csv  Powerband_classification_results_perband.csv  __init__.py  classification_3.ipynb  classification_4.ipynb  classification_4_csp copy.ipynb  classification_5_FBcsp.ipynb  classification_results.csv  classification_results1_logo_detailed.csv  classification_results1_logo_summary.csv  classification_results2_logo_detailed.csv  classification_results_2.csv  classification_results_2__perband_detailed.csv  classification_results_2_perband_summary.csv  classification_results_3FBCSP__perband_detailed.csv  classification_results_3FBCSP_logo_detailed.csv  classification_results_3FBCSP_perband_summary.csv  classification_results_3_fbcsp.csv  classification_results_4_fbcsp_like_muse.csv  classifications.ipynb  comp_data_analysis.ipynb  completion.ipynb  connectivity_matrices_D.pkl  connectivity_matrices_D_1.pkl  (+34 more)
(+211 files in other folders)
