[tool.poetry]
name = "true"
version = "0.1.0"
description = "Reading task while distracted"
authors = ["erangad <erangadesaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
psychopy = "^2024.1.3"
numpy = "^1.26.4"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
